# federated-leaning-module

./: README.md
libpts/: CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt
libpts/include/libhcs/: pcs.h
libpts/python/: CMakeLists.txt  setup.py
libpts/python/api/: paillier.py  paillier_test.py
libpts/python/homomorph/: dataIO.cpp  dataIO.h  paillier.cpp  paillier.h
libpts/python/homomorph/cpu/: pai_thread.cpp  pai_thread.h  paillier_thread.cpp  paillier_thread.h
libpts/python/libpts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libpts/python/pybind11/pybind11/: __main__.py
libpts/src/: pcs.c
libpts/test/: example.c  test.py
